<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meta_launch_package</name>
  <version>1.0.0</version>
  <description>
    A package for meta-launch files, which are used to 
    launch other packages
  </description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>MIT</license>

  <depend>copmleted_scripts_teleoperation</depend>	
  <depend>completed_scripts_control</depend>	
  <depend>completed_scripts_point-by-point-programming</depend>	

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
